Adição do SCSS e substituição de medidas fixas no CSS. Melhorias adicionadas nas barras seletoras de conhecimentos. Divisão do codigo JS em funções anonimas com IIFE

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             menu
         </span>
     </header>
+
     <main>
         <section id="home">
             <h1>Desenvolvedor Web</h1>
@@ -142,7 +143,7 @@
         <div class="divisor"></div>
 
         <section id="sobre-min">
-            <h2>Sobre min</h2>
+            <h2>Sobre mim</h2>
             <div class="blocos">
                 <div class="bloco">
                     <div class="setas">
@@ -247,51 +248,34 @@
                 <select name="seletor-um" id="seletor-um" class="seletor">
                     <option value="HTML&CSS">HTML&CSS</option>
                     <option value="JavaScript">JavaScript</option>
+                    <option value="React">React</option>
                     <option value="Python">Python</option>
                     <option value="Logica-de-Programação">Lógica de Programação</option>
-                    <option value="UX/UI">UX/UI design</option>
+                    <option value="SASS">SASS</option>
                     <option value="Git&GitHub">Git e GitHub</option>
+                    <option value="Conceitos-Gerais-e-Outros">Conceitos Gerais e Outros</option>
                 </select>
             </div>
 
             <div class="barra-seletora-dois">
                 <h3>Topico</h3>
                 <select name="seletor-dois" id="seletor-dois" class="seletor">
-                    <option value="o-que-sei">O que sei sobre</option>
-                    <option value="o-que-acho-sobre">O que acho sobre</option>
-                    <option value="para-que-serve">Para que serve</option>
+                    
                 </select>
             </div>
 
             <div class="conhecimentos-texto">
-                <div id="paragrafo">Meus conhecimentos de <strong>HTML&CSS</strong> abrangem des de as propriedades basicas de <strong>CSS</strong> como margin, paddin, border até recursos mais avançados como display flex, keyframes, pseudo-class e pseudo-elements. Ja com  <strong>HTML</strong> tenho todos os conhecimentos nescessarios para a construção de uma web page do zero, alem de outros conhecimentos, tambem importantes, como a teoria do box-model e muito mais.</div>
-                <div id="grafico">
-                    <div class="porcentagem">
-                        <div class="quantidade"></div>
-                        <div id="barras">
-                            <div class="barra-um"></div>
-                            <div class="barra-dois"></div>
-                            <div class="barra-tres"></div>
-                            <div class="barra-quatro"></div>
-                            <div class="barra-cinco"></div>
-                            <div class="barra-seis"></div>
-                            <div class="barra-sete"></div>
-                            <div class="barra-oito"></div>
-                            <div class="barra-nove"></div>
-                            <div class="barra-dez"></div>
+                <div id="paragrafo">
+                    <p>Meus conhecimentos de <strong>HTML&CSS</strong> abrangem des de as propriedades basicas de <strong>CSS</strong> como margin, paddin,</p>
+                    <div id="code-box">
+                        <div id="botoes">
+                            <abbr title="limpar"><div class="vermelho-html botao"></div></abbr>
+                            <abbr title="copiar"><div class="amarelo-html botao"></div></abbr>
+                            <abbr title="resetar"><div  class="verde-html botao"></div></abbr>
                         </div>
-                        <div id="numeros">
-                            <div class="numero-um">1</div>
-                            <div class="numero-dois">2</div>
-                            <div class="numero-tres">3</div>
-                            <div class="numero-quatro">4</div>
-                            <div class="numero-cinco">5</div>
-                            <div class="numero-seis">6</div>
-                            <div class="numero-sete">7</div>
-                            <div class="numero-oito">8</div>
-                            <div class="numero-nove">9</div>
-                            <div class="numero-dez">10</div>
-                        </div>
+                        <textarea name="code-area" id="code-area-html" cols="30" rows="5">
+
+                        </textarea>
                     </div>
                 </div>
             </div>
