Opção de adicionar feetures com codigo, junto aos textos resposta de conhecimentos

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="blocos">
                 <div class="bloco">
                     <div class="setas">
-                        <div class="para-cima rosa">
+                        <div class="para-cima fundo-rosa">
                             <span class="material-symbols-outlined">
                                 arrow_upward
                             </span>
@@ -160,12 +160,12 @@
                     </div>
                     <div class="texto">
                         <div class="frente"><h2>Quem sou eu</h2></div>
-                        <div class="emcima rosa"><p class="invertido">Meu nome é Lucas Sanhudo, tenho 17 anos e moro em Viamão RS.</p></div>
+                        <div class="emcima fundo-rosa"><p class="invertido">Meu nome é Lucas Sanhudo, tenho 17 anos e moro em Viamão RS.</p></div>
                     </div>
                 </div>
                 <div class="bloco row-reverse">
                     <div class="setas">
-                        <div class="para-cima azul">
+                        <div class="para-cima fundo-azul">
                             <span class="material-symbols-outlined">
                                 arrow_upward
                             </span>
@@ -178,12 +178,12 @@
                     </div>
                     <div class="texto">
                         <div class="frente"><h2>Meus objetivos</h2></div>
-                        <div class="emcima azul"><p class="invertido">Pretendo me tornar um desenvolvedor Front-end e um programado.</p></div>
+                        <div class="emcima fundo-azul"><p class="invertido">Pretendo me tornar um desenvolvedor Front-end e um programado.</p></div>
                     </div>
                 </div>
                 <div class="bloco">
                     <div class="setas">
-                        <div class="para-cima verde">
+                        <div class="para-cima fundo-verde">
                             <span class="material-symbols-outlined">
                                 arrow_upward
                             </span>
@@ -196,12 +196,12 @@
                     </div>
                     <div class="texto">
                         <div class="frente"><h2>Como eu sou</h2></div>
-                        <div class="emcima verde"><p class="invertido">Sou uma pessoa calma, sociável, e busco estar sempre aprendendo.</p></div>
+                        <div class="emcima fundo-verde"><p class="invertido">Sou uma pessoa calma, sociável, e busco estar sempre aprendendo.</p></div>
                     </div>
                 </div>
                 <div class="bloco row-reverse">
                     <div class="setas">
-                        <div class="para-cima amarelo">
+                        <div class="para-cima fundo-amarelo">
                             <span class="material-symbols-outlined">
                                 arrow_upward
                             </span>
@@ -214,12 +214,12 @@
                     </div>
                     <div class="texto">
                         <div class="frente"><h2>Do que gosto</h2></div>
-                        <div class="emcima amarelo"><p class="invertido">Gosto de tecnologia, desafios e problemas de logistica como sudoku.</p></div>
+                        <div class="emcima fundo-amarelo"><p class="invertido">Gosto de tecnologia, desafios e problemas de logistica como sudoku.</p></div>
                     </div>
                 </div>
                 <div class="bloco">
                     <div class="setas">
-                        <div class="para-cima vermelho">
+                        <div class="para-cima fundo-vermelho">
                             <span class="material-symbols-outlined">
                                 arrow_upward
                             </span>
@@ -232,7 +232,7 @@
                     </div>
                     <div class="texto">
                         <div class="frente"><h2>O que busco</h2></div>
-                        <div class="emcima vermelho"><p class="invertido">Busco uma oportunidade para inicar minha carreira como desenvolvedor.</p></div>
+                        <div class="emcima fundo-vermelho"><p class="invertido">Busco uma oportunidade para inicar minha carreira como desenvolvedor.</p></div>
                     </div>
                 </div>
             </div>
@@ -268,13 +268,13 @@
                 <div id="paragrafo">
                     <p>Meus conhecimentos de <strong>HTML&CSS</strong> abrangem des de as propriedades basicas de <strong>CSS</strong> como margin, paddin,</p>
                     <div id="code-box">
-                        <div id="botoes">
-                            <abbr title="limpar"><div class="vermelho-html botao"></div></abbr>
-                            <abbr title="copiar"><div class="amarelo-html botao"></div></abbr>
-                            <abbr title="resetar"><div  class="verde-html botao"></div></abbr>
+                        <div class="botoes-code-area-html">
+                            <abbr title="limpar"><div class="botao-vermelho"></div></abbr>
+                            <abbr title="copiar"><div class="botao-amarelo"></div></abbr>
+                            <abbr title="resetar"><div class="botao-verde"></div></abbr>
                         </div>
-                        <textarea name="code-area" id="code-area-html" cols="30" rows="5">
-
+                        <textarea class="code-area-html" cols="15" rows="3">
+                            
                         </textarea>
                     </div>
                 </div>
@@ -290,12 +290,12 @@
                     <div id="tela">
                         <div id="desligado"></div>
                         <div class="projetos">
-                            <div class="projeto amarelo"></div>
-                            <div class="projeto rosa"></div>
-                            <div class="projeto azul"></div>
+                            <div class="projeto fundo-amarelo"></div>
+                            <div class="projeto fundo-rosa"></div>
+                            <div class="projeto fundo-azul"></div>
                         </div>
                     </div>
-                    <div id="botoes">
+                    <div id="botoes-game-boy">
                         <div class="botao-seta-esquerda">
                             <span class="material-symbols-outlined">
                                 arrow_upward
